# aid-distribution-with-assessments-artifacts

./: .gitmodules  ARTIFACT-APPENDIX.md  Cargo.toml  Dockerfile  README.md  install_MPSPDZ_deps.sh  run_all_experiments.sh  rust-toolchain
benches/: hbc_2pc_1.rs  hbc_2pc_2.rs  hbc_thhe_1.rs  hbc_thhe_2.rs  mal_thhe_1.rs  mal_thhe_2.rs
src/: thelgamal.rs
src/src/: lib.rs  thbgn.rs
