[package]
name = "aid-distribution-with-assessments"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto = {version = "0.5.1", features = ["elliptic-curve"]}
openssl = {version = "0.10.35", features = ["vendored"]}
ark-ff = "^0.4.1"
ark-std = "^0.4.0"
ark-ec = "^0.4.1"
ark-bls12-381 = "^0.4.0"
ark-serialize = "^0.4.1"
tink-hybrid = "0.3.0"
tink-core = "0.3.0"
tink-aead = "0.3.0"
tink-signature = "0.3.0"
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.6"
serde = {version= "1.0.216", features=["derive"]}
serde_bytes = "0.11.15"
bincode = "1.3.3"
secret_sharing_and_dkg = "0.14.0"
num-traits = "0.2.19"
modinverse="0.1.1"
num-bigint-dig = "^0.7"
discrete-gaussian = "0.0.6"
statrs = "0.18.0"
criterion = "0.5.1"

[[bench]]
name = "hbc_2pc_1"
harness = false

[[bench]]
name = "hbc_2pc_2"
harness = false

[[bench]]
name = "hbc_thhe_1"
harness = false

[[bench]]
name = "hbc_thhe_2"
harness = false

[[bench]]
name = "mal_thhe_1"
harness = false

[[bench]]
name = "mal_thhe_2"
harness = false